@@ -107,8 +107,9 @@ var DimpBase = {
 
     selectAll: function()
     {
-        var tmp = $('msglistHeaderContainer').down('DIV.msCheckAll');
-        if (tmp.hasClassName('msCheckOn')) {
+        var tmp = $('msglistHeaderContainer').select('DIV.msCheckAll');
+
+        if (tmp.first().hasClassName('msCheckOn')) {
             this.resetSelected();
         } else {
             this.viewport.select($A($R(1, this.viewport.getMetaData('total_rows'))), { right: true });
@@ -138,7 +139,7 @@ var DimpBase = {
 
     resetSelectAll: function()
     {
-        DimpCore.toggleCheck($('msglistHeaderContainer').down('DIV.msCheckAll'), false);
+        DimpCore.toggleCheck($('msglistHeaderContainer').select('DIV.msCheckAll'), false);
     },
 
     // num = (integer) See absolute.
