@@ -33,7 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
-* 
+* [mms] Fix toggling select all checkbox in both dynamic mailbox layouts.
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -3744,7 +3744,7 @@
    <date>2014-09-05</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
-* 
+* [mms] Fix toggling select all checkbox in both dynamic mailbox layouts.
    </notes>
   </release>
  </changelog>
