@@ -2,6 +2,7 @@
 v6.2.3-git
 ----------
 
+[mms] Fix toggling select all checkbox in both dynamic mailbox layouts.
 
 
 ------
